--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Flappy Volcano Bird</title>
+
+    <!-- Connect CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -26,5 +29,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Connect JS -->
+    <script src="game.js"></script>
 </body>
 </html>
