--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id="game-container">
+        <div id="parallax-bg"></div>
         <canvas id="birdCanvas"></canvas>
         <div id="score-live" style="display: none;">0</div>
         
@@ -34,3 +35,4 @@
     <script src="game.js"></script>
 </body>
 </html>
+
