--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
+<meta charset="UTF-8">
+	
+    <link rel="icon" type="image/png" href="logo.png"> 
+    <link rel="apple-touch-icon" href="logo.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Flappy Volcano Bird</title>
 	    <!-- Connect CSS -->
@@ -32,3 +37,4 @@
     <script src="game.js"></script>
 </body>
 </html>
+
