--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <meta charset="UTF-8">
 	
-    <link rel="icon" type="image/png" href="logo.png"> 
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" type="image/png" href="favicon.png"> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Flappy Volcano Bird</title>
@@ -37,4 +36,5 @@
     <script src="game.js"></script>
 </body>
 </html>
+
 
